--- a/.gitignore
+++ b/.gitignore
@@ -12,13 +12,15 @@ target/
 .settings
 .springBeans
 .sts4-cache
-.properties
 
 ### IntelliJ IDEA ###
 .idea
 *.iws
 *.iml
 *.ipr
+
+src/main/resources/
+*.properties
 
 ### NetBeans ###
 /nbproject/private/
