--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ target/
 .settings
 .springBeans
 .sts4-cache
+.properties
 
 ### IntelliJ IDEA ###
 .idea
@@ -19,7 +20,6 @@ target/
 *.iml
 *.ipr
 
-*.properties
 
 ### NetBeans ###
 /nbproject/private/
